<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Randomizer DBD</string>
    <string name="menu">MENU</string>
    <string name="randomizer">Randomizer</string>
    <string name="challenges">Challenges</string>
    <string name="skill_check">SKILL CHECK</string>
    <string name="choice">Selection</string>
    <string name="killers">Killers</string>
    <string name="survs">Survivors</string>
    <string name="select_char">Choose characters</string>
    <string name="excude_perks">Exclude perks</string>
    <string name="killer_randomizer_help">When no character is selected, the randomizer randomly selects one maniac from all characters, as well as random skills and ability enhancements for him.\n\nWhen one character is selected, then random skills and ability enhancements The randomizer selects specifically for the selected maniac.\n\nWhen two or more characters are selected, the randomizer randomly selects one maniac from the selected characters, as well as random skills and ability improvements for him.\n\nIf you click on the skill icon, it will be excluded from the selection of the randomizer.\n\nTo return the skill to the selection of the randomizer, click on the icon again.\n\nTo start the randomizer, click on the button in the form of a dice.\n\nSee you in the fog! </string>
    <string name="surv_randomizer_help">When no character is selected, the randomizer randomly selects one survivor from all characters, as well as random skills for him.\n\nWhen one character is selected, the randomizer selects random skills specifically for the selected survivor.\n\nWhen two or more characters are selected, the randomizer randomly selects one survivor from the selected characters, as well as random skills for him.\n\nIf click on the skill icon, then it will be excluded from the selection of the randomizer.\n\nTo return the skill to the selection of the randomizer, click on the icon again.\n\nTo start the randomizer, click on the button in the form of a dice.\n\nSee you in the fog!</string>
    <string name="good_skill_check">Good Skill Check</string>
    <string name="great_skill_check">Great Skill Check</string>
    <string name="score">Score</string>
    <string name="record">Record</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="end_game">Game Over</string>
    <string name="save_choice">Save selection</string>
    <string name="clear_choice">Clear selection</string>
    <string name="stats">Statistics</string>
    <string name="select_account">Select account</string>
    <string name="selected_few_perks">Choose at least 4 perks</string>

    <string name="stats_tab_text_1">General</string>
    <string name="stats_tab_text_2">Killers</string>
    <string name="stats_tab_text_3">Survs</string>

    <string name="error_text_stats_load_failed">An error occurred while loading data. Make sure the player has a public Steam profile and plays DBD then try again.</string>
    <string name="enter_steam_link">Enter the link to the player`s Steam profile.</string>
    <string name="only_highlighted_part">(only the highlighted part)</string>
    <string name="example">Example:</string>
    <string name="search">Search</string>
    <string name="error_occurred">An error has occurred. Try again.</string>
    <string name="account_not_found">This account was not found</string>
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>

    <string name="news">News</string>
    <string name="snackbar_error">An error has occurred. Try again</string>
    <string name="fill_search_field">Fill in the search field</string>

    <string name="favourite_players">Favourite players</string>
    <string name="reset_progress_text">Are you sure you want to reset progress?</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="reset_progress">Reset progress</string>
    <string name="game">Game</string>
    <string name="find">Find</string>
    <string name="nickname_steam_id_url">Nickname, Steam ID, URL</string>
    <string name="common">General</string>

    <string name="challenges_over">The challenges are over</string>
    <string name="title_activity_main">MainActivity</string>
</resources>