<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="128dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/reset_button_bg" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="310dp"
        android:layout_height="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dialog_reset_challenges_question_bg" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:letterSpacing="0.08"
        android:lineSpacingExtra="4dp"
        android:text="@string/reset_progress_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="13.3dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="128dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/reset_button_bg" />

    <TextView
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:gravity="center"
        android:letterSpacing="0.08"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#e41c1c"
        android:textSize="11.7dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:gravity="center"
        android:letterSpacing="0.08"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="11.7dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>